Url parameters and data added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" />
 
-    <title>QR Code Generator API Challenge</title>
+    <title>QRme</title>
 
     <!-- <meta http-equiv="refresh" content="60"> -->
 
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <h1 class="heading">QRME</h1>
+    <h1 class="heading">QRme</h1>
 
     <main>
         <section id="qr-code-settings" class="container container-front">
